--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>Hello world! This is HTML5 Boilerplate.</h1>
+        <h1>Site Styles, and Elements</h1>
 <!--
         <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
