--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
             <![endif]-->
 
             <!-- Add your site or application content here -->
-            <h1>Site Styles, and Elements</h1>
+            <h1>Living Style Guide</h1>
+            <p>
+                Examples of Elements and Components for the site.
+                <p>More information is available through the 
+                    <span style="position:relative; width: 1.8em; height: 1.8em; display: inline-block; margin-left:5px;">
+                        <button class="help_button">?</button>
+                    </span>
+                 buttons </p>
+            </p>
+            <!--
             <button onclick="javascript:introJs().start();">Show Details</button>
+            -->
     <!--
             <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
