--- a/index.html
+++ b/index.html
@@ -346,11 +346,11 @@
                     <p>Labeled</p>
                     <hr/>
                     <div class="input_wrap col">
-                        <label for="radio_1">First option</label>
+                        <label for="radio_1">Option 1</label>
                         <input type="radio" name="iCheck" class="icheck" id="radio_1">
                     </div>
                     <div class="input_wrap col">
-                        <label for="radio_2">Second option</label>
+                        <label for="radio_2">Option 2</label>
                         <input type="radio" name="iCheck" class="icheck" id="radio_2" checked>
                     </div>
                 </div>
@@ -368,14 +368,21 @@
                     </div>
                 </div>
 
+                <div class="clearspace"></div>
                 <h3>Check Boxes</h3>
 
                     <input type="checkbox" class="icheck">
                     <input type="checkbox" class="icheck" checked>
 
-
+                <div class="clearspace"></div>
                 <h3>Switches / Toggles </h3>
                     <input type="checkbox" class="jquery-onoff" checked />
+
+
+
+                <div class="clearspace"></div>
+                <h3>Stake</h3>
+                <input type="text" placeholder="$"/>
 
             </div>
 
@@ -670,7 +677,137 @@
                     </div>
                 </div>
             </div>
+            <div class="module">
+                <h2 class="center">Time</h2>
+                <span id="time_example_1" class="time">
+                    <span class="warn">
+                        <div class="icon x-small icon-sports-time"></div>
+                         Betting Closing in 
+                    </span>
+                    <span class="time_text">
+                        <span class="time-until"></span> at
+                        <span class="time-local"></span>
+                    </span>
+                </span>
+            </div>
 
+            <div class="module">
+                <h2 class="center">Lists</h2>
+                
+                <div class="clearspace"></div>
+                <h3>Event List</h3>
+
+                <ul class="luxbet_list_page">
+                    <li>
+                        <a>
+                            <!-- should come from an icon helper -->
+                            <div class="icon icon-sports-horse-racing category-icon"></div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span id="time_example_1" class="time">
+                                    <span class="warn">
+                                        <div class="icon x-small icon-sports-time"></div>
+                                         Betting Closing in 
+                                    </span>
+                                    <span class="time_text">
+                                        <span class="time-until"></span> at
+                                        <span class="time-local"></span>
+                                    </span>
+                                </span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+
+
+                <div class="clearspace"></div>
+                <h3>Event List (racing)</h3>
+
+                <ul class="luxbet_list_page">
+                    <li class="resulted">
+                        <a>
+                            <!-- should come from an icon helper -->
+                            <div class="icon-cheveron red">
+                                <div class="label">R55</div>
+                            </div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span id="time_example_1" class="time">
+                                    <span class="message">Closed</span>
+                                </span>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <!-- should come from an icon helper -->
+                            <div class="icon-cheveron green">
+                                <div class="label">R55</div>
+                            </div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span id="time_example_1" class="time">
+                                    <span class="warn">
+                                        <div class="icon x-small icon-sports-time"></div>
+                                         Betting Closing in 
+                                    </span>
+                                    <span class="time_text">
+                                        <span class="time-until"></span> at
+                                        <span class="time-local"></span>
+                                    </span>
+                                </span>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <!-- should come from an icon helper -->
+                            <div class="icon-cheveron">
+                                <div class="label">R55</div>
+                            </div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                                <span id="time_example_1" class="time">
+                                    <span class="warn">
+                                        <div class="icon x-small icon-sports-time"></div>
+                                         Betting Closing in 
+                                    </span>
+                                    <span class="time_text">
+                                        <span class="time-until"></span> at
+                                        <span class="time-local"></span>
+                                    </span>
+                                </span>
+                            </span>
+
+                            <div class="products">
+                                <span class="product" style="background-color:#0099FF">DIV</span>
+                            </div>
+
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
 
             <footer>
                 <h1>
