Added Site navigation

--- a/src/index.html
+++ b/src/index.html
@@ -809,6 +809,76 @@
 
             </div>
 
+            <div class="module">
+                <h2 class="center">Site Navigation</h2>
+
+                <div class="clearspace"></div>
+                <h3>Left hand Nav</h3>
+
+                <nav>
+                    <ul class="mainNav">
+                        <li>
+                            <a class="active">
+                                <h3>Next To Go</h3>
+                            </a>
+                        </li>
+                        <li>
+                            <span class="no-link">
+                                <h3>Racing</h3>
+                            </span>
+                        </li>
+                        <li>
+                            <a>
+                                Horse Racing
+                            </a>
+                            
+                        </li>
+                        <li>
+                            <a>
+                                Harness Racing
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                Greyhound Racing
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <h3>Sports</h3>
+                            </a>
+                        </li>
+
+                        <li>
+                            <span class="no-link">
+                                <h3>My Account</h3>
+                            </span>
+
+                            <ul class="accountInfo">
+                                <li>
+                                    Balance: 
+                                    <span class="userBalance">$10.06</span>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a>
+                                Account Overview
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                Statement
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                Undecided
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
             <footer>
                 <h1>
                     <br>
